syntax = "proto3";

package shortener;

option go_package = "shortener/gen;shortenerpb";

service ShortenerService {
  rpc CreateShortLink(CreateShortLinkRequest) returns (ShortLinkResponse);
  rpc GetOriginalUrl(GetOriginalUrlRequest) returns (OriginalUrlResponse);
}

message CreateShortLinkRequest {
  string original_url = 1;
}

message ShortLinkResponse {
  string short_url = 1;
}

message GetOriginalUrlRequest {
  string short_url = 1;
}

message OriginalUrlResponse {
  string original_url = 1;
}
